@@ -1,3 +1,5 @@
+* Add dimension and geometry type in field definition
+
 Version 5.0.0 - 2018-10-01
 * Bug fixes (see mercurial logs for details)
 * Add support for Python 3.7
